fix: adding required and unique message
